--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ published: true
         <h1 class="header author-header" itemprop="headline">{{ site.title }}</h1>
         
         <div class="subtitle">
-            <h2>Dev-Ops Engineer</h2>
+            <h2>i'm Dev-Ops & Cloud enthusiastic</h2>
         </div>
         
 
